TASK: Apply migration Neos.Neos-20161220163741
Migrate usages of the Settings path Neos.Neos.typoScript to
Neos.Neos.fusion

--- a/Configuration/Settings.yaml
+++ b/Configuration/Settings.yaml
@@ -1,11 +1,11 @@
 
 Neos:
   Neos:
-    typoScript:
-      autoInclude:
-        Psmb.Term: true
     userInterface:
       translation:
         autoInclude:
           Psmb.Term:
             - 'NodeTypes/*'
+    fusion:
+      autoInclude:
+        Psmb.Term: true
