TASK: Apply migration Neos.Neos-20161125002322
Adjusts code to package renaming from "TYPO3.Neos" to "Neos.Neos"

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -16,6 +16,6 @@
         reloadIfChanged: FALSE
         inspector:
           group: 'term'
-          editor: 'TYPO3.Neos/Inspector/Editors/TextAreaEditor'
+          editor: 'Neos.Neos/Inspector/Editors/TextAreaEditor'
           editorOptions:
             rows: 7
